fix search bar mix blend mode on IOS

--- a/src/global.scss
+++ b/src/global.scss
@@ -132,6 +132,7 @@ button {
   img {
     mix-blend-mode: multiply;
     width: 80px;
+    transform: translate3d(0, 0, 0);
   }
 
   input {
